<resources>
    <string name="app_name">Lab8</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="character_name">-</string>
    <string name="species_title">Species</string>
    <string name="status_title">Status</string>
    <string name="gender_title">Gender</string>
    <string name="species_detail_string">-</string>
    <string name="status_details_string">-</string>
    <string name="gender_details_string">-</string>
    <string name="aToZ__title">Ordenar: A - Z</string>
    <string name="zToA__title">Ordenar: Z - A</string>
    <string name="item_character_stats_info">-</string>
    <string name="item_character_name">-</string>
    <string name="origin_details_title">Origin</string>
    <string name="episode_appearances_details_title">Episode Appearances</string>
    <string name="episode_appearances_details">-</string>
    <string name="origin_details">-</string>
    <string name="email_input">sil21764@uvg.edu.gt</string>
    <string name="password_hint">Ingrese su contraseña</string>
    <string name="email_hint">Ingrese su correo</string>
    <string name="login_button_hint">Iniciar sesion</string>
    <string name="logout_hint">Cerrar sesión</string>
    <string name="sync_hint">Sincronizar</string>
    <string name="delete_hint">Eliminar</string>
    <string name="name_title">Name</string>
    <string name="save_button_hint">Guardar</string>
</resources>