<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/menu_character_sort_aToZ"
        android:title="@string/aToZ__title"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_character_sort_zToA"
        android:title="@string/zToA__title"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_logout"
        android:title="@string/logout_hint"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_sync"
        android:title="@string/sync_hint"
        app:showAsAction="ifRoom"
        android:icon="@drawable/sync_icon"/>
    <item
        android:id="@+id/menu_details_delete"
        android:title="@string/delete_hint"
        app:showAsAction="ifRoom"
        android:icon="@drawable/delete_icon"/>
</menu>