<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginFragment">

    <ImageView
        android:layout_width="325dp"
        android:layout_height="125dp"
        android:src="@drawable/rick_and_morty"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/email_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/RM_Logo"
        app:layout_constraintVertical_chainStyle="packed"
        android:layout_marginVertical="@dimen/tab_size"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/RM_Logo"
        android:layout_marginVertical="@dimen/tab_size"
        app:layout_constraintBottom_toTopOf="@id/password_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/email_hint"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="32dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginBottom="@dimen/tab_size"
        android:id="@+id/password_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/email_input_layout"
        app:layout_constraintBottom_toTopOf="@id/login_button"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="32dp"
    app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/password_hint"
        app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/password_input_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/password_input_layout"
        app:layout_constraintEnd_toEndOf="@id/password_input_layout"
        android:text="@string/login_button_hint"
        android:layout_marginVertical="@dimen/tab_size"/>

    <TextView
        android:id="@+id/key_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/email_input"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginVertical="28dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>